# Plumtree-Agents

./: .env.example  .gitignore  Plumtree_FoW_Brief_2026-04-06.docx  README.md  main.py  pyproject.toml  run_weekly_report.py
agents/proposal_sow/: agent.py  prompts.py  workflow.py
agents/research/: agent.py  formatter.py  prompts.py
config/: settings.py
integrations/: google_auth.py  google_docs.py  google_drive.py  google_sheets.py  google_slides.py  slack_client.py  web_search.py
shared/: guardrails.py  llm.py
